Wraparound fixed

--- a/index.css
+++ b/index.css
@@ -202,6 +202,6 @@ button.close:hover {
 /* Website content below pano */
 
 #website {
-	background: #fff; color: #999;
-	padding: 1em; margin: 1em;
+	background: #fff; color: #555;
+	padding: 1em 2em; margin: 1em;
 }
